syntax = "proto3";

option go_package = "route256/loms/loms";

service Loms{
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc ListOrder(ListOrderRequest) returns (ListOrderResponse);
    rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
    rpc OrderPayed(OrderPayedRequest) returns (OrderPayedResponse);
    rpc Stocks(StocksRequest) returns (StocksResponse);
}

message CreateOrderRequest{
    uint64 user = 1;
    repeated Items item = 2;
}
message CreateOrderResponse{
    int64 orderID = 1;
}

message Items{
    uint32 sku = 1;
    uint32 count = 2;
}

message ListOrderRequest{
    int64 orderID = 1;
}

message ListOrderResponse{
    string status = 1;
    uint64 user = 2;
    repeated Items items = 3;
}

message CancelOrderRequest{
    int64 orderId = 1;
}

message CancelOrderResponse{}

message OrderPayedRequest{
    int64 orderID = 1;
}

message OrderPayedResponse{}

message StocksRequest{
    uint32 sku = 1;
}

message StocksResponse{
    repeated Stock stocks = 1; 
}

message Stock{
    int64 warehouseID = 1;
    uint64 count = 2;
}